--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "googleapis": "^164.1.0",
     "jose": "^6.1.0",
     "motion": "^12.23.24",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
